# EmailParsing

./: .env.example  .env.vercel  .flake8  .gitignore  .isort.cfg  .vercelignore  AGENT.md  CICD_STATUS.md  Dockerfile  GITHUB_SETUP.md  HEALTH_DIAGNOSTICS_ENHANCEMENT.md  PROJECT_CONCLUSION.md  README.md  REFACTORING_AI_MODULES.md  SETUP_CHECKLIST.md  SYNTHESE_PROJET_EMAILPARSING.md  TASKS.md  VERCEL_DEPLOYMENT.md  VERCEL_SETUP_SUMMARY.md  bandit-results.json  comprehensive_performance_test.py  configure-supabase.sh  configure-vercel-env.sh  database_schema_supabase.sql  debug_detailed.py  debug_storage_isolation_fix.py  deploy-to-vercel.sh  fix_textcontent.py  local_code_quality_check.sh  mypy.ini  performance_test.py  pyproject.toml  pytest.ini  requirements.txt  safety-results.json  sambanova_status.py  setup.cfg  setup.py  simple_performance_test.py  simple_storage_test.py  (+15 more)
.github/: dependabot.yml
api/: index.py  mcp.py  requirements.txt  serverless_utils.py
docs/: HEALTH_SERVICES_API.md  INBOUND_EMAIL_ADDRESS_SUPPORT.md  TROUBLESHOOTING_HEALTH_SERVICES.md  api-reference.md  client-examples.md  integration-patterns.md  local-testing-guide.md  mcp-capabilities.md  migration-guide.md  openapi.yaml  rapport.md  sambanova-models-and-database.md  security-guide.md  setup-guide.md  troubleshooting-guide.md
examples/: integration_demo.py
src/: api_routes.py  config.py  email_routing.py  extraction.py  integrations.py  logging_system.py  models.py  server.py  storage.py  webhook.py
tasks/: AI006_COMPLETION_REPORT.md  AI007_COMPLETION_REPORT.md  CICD_STATUS.md  (+16 more)
(+94 files in other folders)
