[metadata]
name = email_parsing
version = 0.1.0
description = Email Parsing MCP Server with AI Integration
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
install_requires =
    pydantic>=1.8.0,<3.0.0
    fastapi>=0.68.0
    uvicorn>=0.15.0
    anyio>=3.0.0
    httpx>=0.23.0
    pytest>=6.0.0
    pytest-asyncio>=0.15.0
    pytest-cov>=2.8.0

[options.packages.find]
where = src
include = *
